--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ nav {
 /* Botones */
 .cta-button, .btn-modern {
     background: var(--gold-color);
-    color: var(--primary-color);
+    color: or: #DEAF37;
     border: none;
     padding: 15px 40px;
     font-size: 1.2rem;
